objects/Position_Approval_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver #1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N0Y00000NNNTiUAP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N0Y00000NNNTlUAP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver #3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N0Y00000NNNTjUAP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Routing_Key__c</fullName>
        <label>Routing Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Position Approval Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RoutingID-{0000}</displayFormat>
        <label>Routing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Position Approval Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>